--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ url: https://brandonsnotepad.info
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+color_scheme: bnp2024
