--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ logo: https://brandonsnotepad.info/assets/img/cropped-logo_512x512.png
 url: https://brandonsnotepad.info
 
 aux_links:
-  Up: https://brandonsnotepad.info
+  Up to Main Site: https://brandonsnotepad.info
 
