Add ga_tracking instead of gtag

--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,4 @@ url: https://brandonsnotepad.info
 aux_links:
   Up to Main Site: https://brandonsnotepad.info
 
-gtag: "G-9VCZJ13626"
+ga_tracking: "G-9VCZJ13626"
